cluster-cd/apps/bitty/vpn/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vpn
  labels:
    pod-security.kubernetes.io/enforce: privileged
